Sprint1/k8s/routes-app.yaml
###########
# APPLICATION
##############
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routes-app-deployment
  labels:
    app: routes-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routes-app
  template:
    metadata:
      labels:
        app: routes-app
    spec:
      containers:
      - name: routes-app
        image: routes-app:v1.0.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: routes-app-service
  namespace: default
spec:
  selector:
    app: routes-app
  ports:
    - protocol: TCP
      port: 80 #service
      targetPort: 5000 #contenedor
      nodePort: 30002
  type: NodePort
