Sprint1/k8s/users-app-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app-deployment
  labels:
    app: users-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
      - name: users-app
        image: users-app:v1.0.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: users-app-service
  namespace: default
spec:
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000
  type: NodePort
