Sprint1/k8s/users-db-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
  labels:
    app: users-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
      - name: users-db
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: users-db-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: users-db-storage
        emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: users-db-service
  labels:
    app: users-db
  namespace: default
spec:
  selector:
    app: users-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
