Sprint1/k8s/offers-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: offers-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: offers-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: offers-app
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: offers-db
    ports:
    - protocol: TCP
      port: 5432
