Sprint1/k8s/posts-networks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: posts-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: posts-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: posts-app
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: posts-db
    ports:
    - protocol: TCP
      port: 5432
