Sprint1/k8s/users-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: users-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: users-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: users-app
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: users-db
    ports:
    - protocol: TCP
      port: 5432
